GNOME Bugzilla – Bug 768093
local-metadata: Fix getting thumbnails for videos
Last modified: 2016-06-27 12:24:28 UTC
.
Created attachment 330430 [details] [review] [0.2.x] local-metadata: Fix getting thumbnails for videos a45fd44 removed the title parsing code, but accidentally removed the ability to get the thumbnail path for videos at the same time. Conflicts: src/local-metadata/grl-local-metadata.c
Created attachment 330431 [details] [review] local-metadata: Fix getting thumbnails for videos a45fd44 removed the title parsing code, but accidentally removed the ability to get the thumbnail path for videos at the same time.
Comment on attachment 330431 [details] [review] local-metadata: Fix getting thumbnails for videos Attachment 330431 [details] pushed as 8b67b77 - local-metadata: Fix getting thumbnails for videos
And pushed to 0.2.x as well.