local-metadata: Fix getting thumbnails for videos

a45fd44 removed the title parsing code, but accidentally removed the
ability to get the thumbnail path for videos at the same time.

Conflicts:
	src/local-metadata/grl-local-metadata.c

https://bugzilla.gnome.org/show_bug.cgi?id=768093